deployments/epp/storybook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-storybook
  namespace: epp
  labels:
    app: epp-storybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-storybook
  template:
    metadata:
      namespace: epp
      labels:
        app: epp-storybook
    spec:
      containers:
      - name: epp-storybook
        image: ghcr.io/elifesciences/enhanced-preprints-storybook:master-d4374362-20221031.1020 # {"$imagepolicy": "epp:epp-storybook"}
        ports:
        - containerPort: 6006
