deployments/epp/storybook/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: epp-storybook-http
  namespace: epp
spec:
  selector:
    app: epp-storybook
  ports:
  - port: 6006
