deployments/epp/storybook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-storybook
  namespace: epp
spec:
  rules:
  - host: epp-storybook.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: epp-storybook-http
            port:
              number: 6006
